<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cap-Man Dialer</string>

    <string name="tab_recents">Recents</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_dialpad">Keypad</string>

    <string name="search_hint">Search contacts or type a number</string>
    <string name="show_more">Show more</string>
    <string name="no_contacts">No contacts yet</string>
    <string name="no_recents">No call history</string>

    <string name="new_contact">New contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="name_hint">Full name</string>
    <string name="number_hint">Phone number</string>
    <string name="add_number">Add number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="info">Details</string>

    <string name="quick_reply">Can\'t talk right now, I\'ll call you back</string>

    <string name="state_incoming">Incoming call</string>
    <string name="state_dialing">Dialing…</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_active">In call</string>
    <string name="state_holding">On hold</string>
    <string name="state_ended">Call ended</string>
    <string name="unknown_number">Unknown number</string>

    <string name="hint_swipe">Swipe right to answer, up to reject</string>
</resources>
